Reworked "index.html" and "styles.css"
Not sure, whether the code quality is better or not, but it works.

--- a/index.html
+++ b/index.html
@@ -8,61 +8,42 @@
 </head>
 
 <body>
-    <div class="calculator">
-
-        <input type="text" id="screen" disabled>
-
-        <div class="button-row">
-            <button type="button">AC</button>
-            <button type="button">/</button>
-            <button type="button">*</button>
-            <button type="button">-</button>
-        </div>
-
-        <div class="button-container1">
-            
-            <div class="button-container2">
-
-                <div class="button-row">
-                    <button type="button">7</button>
-                    <button type="button">8</button>
-                    <button type="button">9</button>
+    <div class="calculator-container">
+        <div class="screen">123,3</div>
+        <div class="button-container">
+            <div class="button-rows">
+                <div class="row">
+                    <button type="button" class="calc-button op">AC</button>
+                    <button type="button" class="calc-button op">/</button>
+                    <button type="button" class="calc-button op">*</button>
                 </div>
-
-                <div class="button-row">
-                    <button type="button">4</button>
-                    <button type="button">5</button>
-                    <button type="button">6</button>
+                <div class="row">
+                    <button type="button" class="calc-button">7</button>
+                    <button type="button" class="calc-button">8</button>
+                    <button type="button" class="calc-button">9</button>
                 </div>
-
-                <div class="button-row">
-                    <button type="button">1</button>
-                    <button type="button">2</button>
-                    <button type="button">3</button>
+                <div class="row">
+                    <button type="button" class="calc-button">4</button>
+                    <button type="button" class="calc-button">5</button>
+                    <button type="button" class="calc-button">6</button>
                 </div>
-
-                <div class="button-row">
-                    <button type="button">1</button>
-                    <button type="button">2</button>
-                    <button type="button">3</button>
+                <div class="row">
+                    <button type="button" class="calc-button">1</button>
+                    <button type="button" class="calc-button">2</button>
+                    <button type="button" class="calc-button">3</button>
                 </div>
-
-                <div class="button-row">
-                    <button type="button">0</button>
-                    <button type="button">.</button>
+                <div class="row">
+                    <button type="button" class="calc-button wider">0</button>
+                    <button type="button" class="calc-button">.</button>
                 </div>
 
             </div>
-
-            <div class="button-column">
-                <button type="button">+</button>
-                <button type="button">=</button>
+            <div class="column-container">
+                <button type="button" class="op">-</button>
+                <button type="button" class="taller op">+</button>
+                <button type="button" class="taller op">=</button>
             </div>
         </div>
-
-
-
-
     </div>
 </body>
 
